Fixed layout issues. Added responsive charts.

--- a/css/outliers.goteo.css
+++ b/css/outliers.goteo.css
@@ -1,17 +1,25 @@
+body {
+    font-size: 10px !important;
+}
 #goteoStats {
     margin-left: auto;
     margin-right:auto;
-    font-size: 12px;
     font-family: Arial, Helvetica, sans-serif;
     color: #58595b;
+}
+.nav-tabs>li.active>a,
+.nav-tabs>li.active>a:focus,
+.nav-tabs>li.active>a:hover {
+    color: #000;
+    cursor: default;
+    background-color: #e7e7e7;
+    border: 1px solid #ddd;
+    border-bottom-color: transparent;
 }
 .chartsSelectors{
     background-color: #e7e7e7;
     padding-top: 10px;
     padding-bottom: 10px;
-    -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.5);
-    -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.5);
-    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.5);
 }
 .mainTitleZone {
     text-align: right;
@@ -94,7 +102,7 @@
 .barGraph.tooltip,
 .rank.name,
 .rank.value {
-    font-size: 12px !important;
+    font-size: 10px !important;
     opacity: 1.0;
     pointer-events: none;
 }
